# moist

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  codecov.yml  ford.md  fpm.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml  ci_build.yml  ci_cov.yml  ci_lint.yml  release-static.yml
app/: cli.f90  driver.f90  main.f90  meson.build  tester.py
config/: install-mod.py  meson.build  sync-version.sh
doc/: conf.py
doc/cavities/: index.rst  iswig.rst
doc/models/: index.rst  pcm.rst
doc/reference/: fortran.rst
docs/: index.rst  requirements.txt
docs/_static/: references.bib
docs/cavities/: drop.rst
docs/recipe/: index.rst  installation.rst
docs/reference/: ase.rst  c.rst  index.rst  pyscf.rst  python.rst
include/: moist.h
man/: moist.adoc
python/: README.rst  ffibuilder.py  meson.build  pyproject.toml
python/include/: moist.h
python/moist/: __init__.py  interface.py  library.py  meson.build  test_interface.py  test_library.py
src/: meson.build  moist.f90
src/moist/: api.f90  build_info.f90  build_info.f90.in  cavity.f90  data.f90  math.f90  meson.build  model.f90  output.f90  radii.f90  type.f90  utils.f90  version.f90
src/moist/cavity/: drop.f90  iswig.f90  meson.build  numsa.f90
src/moist/cavity/drop/: branching.f90  cpcm.f90  filter.f90  gaussian.f90  gradient.f90  marchingcubes.f90  meson.build  objective_phi.f90  parameters.f90  projection.f90  projector.f90  properties.f90  request.f90  setup.f90  switching.f90  types.f90
src/moist/cavity/drop/lsf/: cfc.f90  cfc_kernel.f90  isodensity_callback.f90  meson.build  svdw.f90  svdw_param.f90  svdw_ssd.f90  type.f90
src/moist/data/: atomicrad.f90  en.f90  hardness.f90  mass.f90  meson.build  radii.f90  solventgeometries.inc  solvents.f90  solvents.inc
src/moist/math/: adjacency_list.f90  blas.f90  boys.f90  cell_grid.f90  fftw3.F90  grid.f90  lapack.f90  linalg.f90  meson.build  numdiff.f90  packed_sym.f90  smoothing_kernels.f90  solver.f90  sorter.f90  trigonometry.f90
src/moist/math/blas/: legacy.f90  level1.f90  level2.f90  level3.f90  meson.build
src/moist/math/grid/: becke.f90  lebedev.f90  meson.build  molecular.f90  radial.f90
src/moist/math/lapack/: gels.F90  gesv.F90  gesvd.F90  getrf.f90  getri.f90  getrs.f90  kinds.F90  meson.build  potrf.f90  potrs.f90  solver.f90  sptrs.f90  syev.f90  sygst.f90  sygvd.f90  sygvr.f90  type.f90
src/moist/math/linalg/: decomp.f90  geometry.f90  meson.build  outer.f90  symmetrize.f90
src/moist/math/linalg/lsmr/: lsmrModule.f90  meson.build
src/moist/math/linalg/lsqr/: lsqr.f90  meson.build
src/moist/math/linalg/lusol/: lusol.f90  lusol_ez.f90  meson.build
src/moist/math/numdiff/: cache_module.f90  diff_module.f90  dsm_module.f90  meson.build  numerical_differentiation_module.f90  utilities_module.f90
src/moist/math/solver/: deflation.f90  lbfgsb.f90  meson.build  newton.f90  newton_deflation.f90  onion.f90  slsqp.f90  slsqp_curvature.f90  slsqp_deflation.f90  slsqp_multi_tangent.f90  slsqp_multistart.f90
src/moist/math/solver/fmin/: fmin_module.F90  meson.build
src/moist/math/solver/lbfgsb/: lbfgsb.f90  lbfgsb_linpack_module.f90  meson.build
src/moist/math/solver/newton/: meson.build  nlesolver_module.F90
src/moist/math/solver/slsqp/: bvls_module.f90  meson.build  slsqp_core.f90  slsqp_module.f90  slsqp_support.F90
src/moist/math/sorter/: counting_sort.f90  meson.build  quicksort.f90
src/moist/model/: component.f90  meson.build  parameters.f90
src/moist/model/component/: cds.f90  meson.build  pcm.f90
src/moist/model/component/cds/: calculator.f90  meson.build  parameters.f90  sigma.f90
src/moist/model/component/pcm/: cosmo.f90  cpcm.f90  meson.build  solvers.f90  type.f90
src/moist/model/gems/: meson.build  utils.f90
src/moist/output/: ascii.f90  citations.f90  format.f90  license.f90  meson.build
src/moist/radii/: custom.f90  draco.f90  meson.build  static.f90  type.f90
src/moist/utils/: env.f90  hdf5io.F90  histogram.f90  mem.f90  meson.build  number.f90  prettylistprint.f90  prettyprint.f90  string.f90  timer.f90
subprojects/: fclap.wrap  jonquil.wrap  mstore.wrap
test/: meson.build
test/api/: example.c  meson.build
test/dev/: main.F90  meson.build  test_cavity_drop_born_fit.f90  test_cavity_drop_convergence.f90  test_cavity_drop_deflation_comparison.f90  test_cavity_drop_integration.f90  test_cavity_drop_robustness.f90  test_cavity_drop_timings.f90
test/unit/: main.F90  meson.build  test_cavity_drop_cfc_kernel.f90  test_cavity_drop_cpcm.f90  test_cavity_drop_gradients.f90  test_cavity_drop_integration_ref.f90  test_cavity_drop_lsf.f90  test_cavity_drop_primitives.f90  test_cavity_iswig.f90  test_cavity_numsa.f90  test_component_pcm_cpcm.f90  test_helpers.f90  test_math_adjacency_list.f90  test_math_cell_grid.f90  test_math_grid.f90  test_math_linalg.f90  test_math_numdiff.f90  test_math_solvers.f90  test_math_sorters.f90  test_math_trig.f90  test_radii.f90  test_utils.f90  test_utils_hdf5.f90
