option(
  'lapack',
  type: 'combo',
  value: 'auto',
  yield: true,
  choices: ['auto', 'mkl', 'mkl-rt', 'openblas', 'netlib', 'accelerate', 'custom'],
  description : 'linear algebra backend',
)

option(
  'custom_libraries',
  type: 'array',
  value: [],
  yield: true,
  description: 'Libraries for the custom LAPACK backend. '
    + 'Accepts absolute file paths (/path/to/libfoo.a or .so), '
    + 'a -Ldir prefix followed by library names, '
    + 'or plain library names resolved by the compiler.',
)

option(
  'openmp',
  type: 'boolean',
  value: true,
  yield: true,
  description: 'Use OpenMP parallelisation',
)

option(
  'rism',
  type: 'boolean',
  value: false,
  description: 'Build RISM module (auto-enables FFTW and HDF5)',
)

option(
  'fftw',
  type: 'boolean',
  value: false,
  description: 'Enable FFTW support',
)

option(
  'api',
  type: 'boolean',
  value: true,
  description: 'Build C API using iso_c_binding module',
)

option(
  'python',
  type: 'boolean',
  value: false,
  description: 'Build Python extension module',
)

option(
  'python_version',
  type: 'string',
  value: 'python3',
  description: 'Python version to link against.',
)

option(
  'ilp64',
  type: 'boolean',
  value: false,
  yield: true,
  description: 'Enable BLAS/LAPACK ilp64 support',
)

option(
  'hdf5',
  type: 'boolean',
  value: false,
  description: 'Enable HDF5 support for I/O',
)

option(
  'docs',
  type: 'boolean',
  value: false,
  description: 'Build documentation',
)

option(
  'dev_tests',
  type: 'boolean',
  value: true,
  description: 'Build the dev_tester binary with long-running diagnostic tests',
)
