[build-system]
requires = [
  "meson-python",
  "cffi",
  "setuptools",
  "meson>=1.2.3,!=1.8.0",
]
build-backend = "mesonpy"

[project]
name = "MOIST"
version = "0.6.0a1"
authors = [{"name" = "Lukas Wittmann"}]
description = "Python API for MOIST"
readme = "README.rst"
license.text = "LGPL-3.0-or-later"
urls.repository = "https://github.com/lukaswittmann/moist"
urls.homepage = "https://readthedocs.org/projects/moist"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Fortran",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
  "cffi",
  "numpy",
]
optional-dependencies.pyscf = ["pyscf"]
optional-dependencies.test = [
  "pytest",
  "pytest-cov",
]
