srcs += files(
  'request.f90',
  'parameters.f90',
  'types.f90',
  'branching.f90',
  'objective_phi.f90',
  'switching.f90',
  'gaussian.f90',
  'projector.f90',
  'projection.f90',
  'marchingcubes.f90',
  'filter.f90',
  'setup.f90',
  'properties.f90',
  'gradient.f90',
  'cpcm.f90',
)

subdir('lsf')
